--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "private": true,
   "devDependencies": {
-    "@types/node": "^22.2.0",
-    "tsup": "^8.2.4",
-    "tsx": "^4.17.0",
-    "typescript": "^5.5.4"
+    "@types/node": "22.2.0",
+    "tsup": "8.2.4",
+    "tsx": "4.17.0",
+    "typescript": "5.5.4"
   },
   "dependencies": {
     "fastify": "^4.28.1"
