--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "private": true,
   "devDependencies": {
     "@types/node": "22.2.0",
+    "prisma": "5.18.0",
     "tsup": "8.2.4",
     "tsx": "4.17.0",
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "5.18.0",
     "dotenv": "16.4.5",
     "fastify": "^4.28.1",
     "zod": "3.23.8"
