--- a/compose.yaml
+++ b/compose.yaml
@@ -8,4 +8,4 @@ services:
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=ignitenode03
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
