--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui --api 9527"
   },
   "private": true,
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.2.0",
     "@vitest/coverage-v8": "2.0.5",
+    "@vitest/ui": "2.0.5",
     "prisma": "5.18.0",
     "tsup": "8.2.4",
     "tsx": "4.17.0",
