--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui --api 9527"
+    "test:ui": "vitest --ui"
   },
   "private": true,
   "devDependencies": {
@@ -19,6 +23,7 @@
     "@types/node": "22.2.0",
     "@vitest/coverage-v8": "2.0.5",
     "@vitest/ui": "2.0.5",
+    "npm-run-all": "4.1.5",
     "prisma": "5.18.0",
     "tsup": "8.2.4",
     "tsx": "4.17.0",
