--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -21,10 +22,12 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.2.0",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "2.0.5",
     "@vitest/ui": "2.0.5",
     "npm-run-all": "4.1.5",
     "prisma": "5.18.0",
+    "supertest": "7.0.0",
     "tsup": "8.2.4",
     "tsx": "4.17.0",
     "typescript": "5.5.4",
